    'P' (shift-P) by default

* Sat Dec 10 15:55:34 2005, pabs <pabs@pablotron.org>
  * raggle: apply patch from Michael to fix closing edit window
    annoyance
  * AUTHORS: update to reflect above patch

* Sat Dec 10 19:11:42 2005, pabs <pabs@pablotron.org>
  * raggle: added support for --update (command-line updating).
  * raggle: switched to Logger for logging (this adds a couple new
    logging options, which are documented in the default config)
  * doc/default_config.rb: regenerated

* Sat Dec 10 19:47:22 2005, pabs <pabs@pablotron.org>
  * README: added FAQ about broken feeds

* Sat Dec 10 19:55:26 2005, pabs <pabs@pablotron.org>
  * raggle: add documentation for -U/--update
  * raggle.pod: add documentation for -U/--update
  * raggle.pod: update my feed URLs to be less annoying (s/\.www//)

* Sat Dec 10 20:02:05 2005, pabs <pabs@pablotron.org>
  * po/en_US.po: updated to reflect new i18n strings

* Sat Dec 10 20:05:51 2005, pabs <pabs@pablotron.org>
  * raggle.1: regenerated from POD

* Sat Dec 10 20:09:51 2005, pabs <pabs@pablotron.org>
  * TODO: mark off small things

* Tue Dec 13 13:29:18 2005, pabs <pabs@pablotron.org>
  * raggle: add XML declaration to OPML export, fix typo

* Tue Dec 13 14:22:22 2005, pabs <pabs@pablotron.org>
  * raggle: added Key.yank_link (bound to Y by default).  If you've 
    got a feed item with a truncated or empty description, you
    can fetch the URL in question and render it directly in the
    item description window.

* Tue Dec 13 14:32:04 2005, pabs <pabs@pablotron.org>
  * raggle: better comments for yank options

* Wed Dec 14 16:46:43 2005, pabs <pabs@pablotron.org>
  * raggle: second crack at mouse support (still disabled by default,
    because it's not anywhere near stable)
  * raggle: don't crash at end of grab loop (log => $log)
  * raggle: include error backtrace when log is set to debug
  * raggle: note that refresh intervals are in minutes in config